inst/shiny/sdcApp/www/ihsn-extra-shell.css
/*
 * Do not display the navigation for really small screens
 */

 @media only screen and (max-width: 767px){
     .navbar-nav {
       display: none;
     }
 }

/*
 * Neutralize margins for shell wrappers
 * do not add margins for the html-output used for the shell
 * of the app: Main areas where the sidebar, main column etc are hosted.
 */
.tab-content > .tab-pane > .shiny-html-output,
.tab-content > .tab-pane > .shiny-html-output > .shiny-html-output{
  margin: 0;
}

.wb_sidebar > .shiny-html-output,
.wb-maincolumn > .shiny-html-output,
.wb-maincolumn > .shiny-html-output > .shiny-html-output{
  margin: 0;
}
/*
 * **/

